There you go, a green square

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Green Square on Github Pages</title>
+	<style>
+		.green{
+			background-color: green;
+		}
+		.square{
+			width: 100px;
+			height: 100px;
+		}
+	</style>
+
 </head>
 <body>
 	<h1>The Green Square on GitHub Pages</h1>
 	<p>Josh Rehman 2015/10/18</p>
 	<p>The green square is my version of hello world - it just means to put a green square on the screen.</p>
+	<p>In this case, I'm going to just use a div:</p>
+	<div class="green square"></div>
 </body>
 </html>
+
