--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 	<p>The green square is my version of hello world - it just means to put a green square on the screen.</p>
 	<p>In this case, I'm going to just use a div:</p>
 	<div class="green square"></div>
+	<p>What I learned:</p>
+	<ol>
+		<li>Github makes a distinction between a user and a project page. The user page is created by selecting a special repo name; the project page is created with a specially named branch. Both only require the presence of index.html in the root of the repo.</li>
+		<li>For project pages, if you don't select gh-pages as the default branch then you'll have to keep merging into </li>
+		<li>It's possible to <a href="https://help.github.com/articles/setting-up-a-custom-domain-with-github-pages/">use a custom domain name</a>.</li>
+	</ol>
 </body>
 </html>
 
